--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 node_modules
 
+# Next.js
+.next/
+out/
+build
+dist
+
 # clerk configuration (can include secrets)
 /.clerk/
 
@@ -7,3 +13,7 @@ node_modules
 .env
 .env.local
 .env*.local
+
+# OS files
+.DS_Store
+*.DS_Store
